Fixed overlapping tags.

--- a/client/src/views/story-contents.scss
+++ b/client/src/views/story-contents.scss
@@ -35,6 +35,10 @@
             color: #ff3333;
         }
 
+        .tags {
+            line-height: 1.6em;
+        }
+
         .tag {
             font-size: 0.9em;
             color: #ffffff;
